More flex gap fixes

--- a/src/utilities/flex.css
+++ b/src/utilities/flex.css
@@ -108,15 +108,19 @@
   @each $break in (sm, md, lg) {
     @media (--$(break)) {
       .fd-$(break)-row.fg-$(size) *:not(:last-child) {
+        margin: 0;
         margin-right: var(--size-$(size));
       }
       .fd-$(break)-column.fg-$(size) *:not(:last-child) {
+        margin: 0;
         margin-bottom: var(--size-$(size));
       }
       .fd-$(break)-row-reverse.fg-$(size) *:not(:last-child) {
+        margin: 0;
         margin-left: var(--size-$(size));
       }
       .fd-$(break)-column-reverse.fg-$(size) *:not(:last-child) {
+        margin: 0;
         margin-top: var(--size-$(size));
       }
     }
